--- a/core/pipsy/config/config.ini
+++ b/core/pipsy/config/config.ini
@@ -1,7 +1,7 @@
 [database]
 
-server = 127.0.0.1
+host = 127.0.0.1
 port = 3306
-db   = Pipsy
+db   = db
 user = root
-passwd = root
+passwd = password
