--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "python.pythonPath": "/usr/bin/python",
-    "python.testing.pytestArgs": [
-        "core"
-    ],
+    "python.testing.pytestArgs": [],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true
