--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,10 @@
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
-    "python.pythonPath": "/usr/bin/python",
-    "python.testing.pytestArgs": [],
+    "python.pythonPath": "/home/asi/git/pipeline_core/bin/ubuntu/python",
+    "python.testing.pytestArgs": [
+        "core"
+    ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true
