added more tests

--- a/core/pipsy/config/config.ini
+++ b/core/pipsy/config/config.ini
@@ -1,8 +1,15 @@
 [database]
-
 rdbms = mysql
 host = 127.0.0.1
 port = 3306
 database = unittest
 user = root
 passwd = password
+
+[publishkind]
+geo_high = (nicename='geoHigh', kind='geo', lod='high')
+geo_low  = (nicename='geoLow', kind='geo', lod='low')
+rig_high = (nicename='rigHigh', kind='rig', lod='high')
+rig_low  = (nicename='rigLow', kind='rig', lod='low')
+shaded_high = (nicename='shadedHigh', kind='shaded', lod='high')
+shaded_low  = (nicename='shadedLow', kind='shaded', lod='low')
