--- a/core/pipsy/config/config.ini
+++ b/core/pipsy/config/config.ini
@@ -13,3 +13,9 @@ rig_high = (nicename='rigHigh', kind='rig', lod='high')
 rig_low  = (nicename='rigLow', kind='rig', lod='low')
 shaded_high = (nicename='shadedHigh', kind='shaded', lod='high')
 shaded_low  = (nicename='shadedLow', kind='shaded', lod='low')
+cache_abc_high = (nicename='cacheAbcHigh', kind='cache', subkind='abc', lod='high')
+cache_abc_low = (nicename='cacheAbcLow', kind='cache', subkind='abc', lod='low')
+cache_atom_high = (nicename='cacheAtomHigh', kind='cache', subkind='atom', lod='high')
+cache_atom_low = (nicename='cacheAtomLow', kind='cache', subkind='atom', lod='low')
+cache_gpu_high = (nicename='cacheGpuHigh', kind='cache', subkind='gpu', lod='high')
+cache_gpu_low = (nicename='cacheGpuLow', kind='cache', subkind='gpu', lod='low')
