Publish and PublishMetadata (#6)
* added more tests

* Add publishgroup and publishkind entities

* minor cleanups

* adding publish

* add publishmetadata

--- a/core/pipsy/config/config.ini
+++ b/core/pipsy/config/config.ini
@@ -1,8 +1,21 @@
 [database]
-
 rdbms = mysql
 host = 127.0.0.1
 port = 3306
 database = unittest
 user = root
 passwd = password
+
+[publishkind]
+geo_high = (nicename='geoHigh', kind='geo', lod='high')
+geo_low  = (nicename='geoLow', kind='geo', lod='low')
+rig_high = (nicename='rigHigh', kind='rig', lod='high')
+rig_low  = (nicename='rigLow', kind='rig', lod='low')
+shaded_high = (nicename='shadedHigh', kind='shaded', lod='high')
+shaded_low  = (nicename='shadedLow', kind='shaded', lod='low')
+cache_abc_high = (nicename='cacheAbcHigh', kind='cache', subkind='abc', lod='high')
+cache_abc_low = (nicename='cacheAbcLow', kind='cache', subkind='abc', lod='low')
+cache_atom_high = (nicename='cacheAtomHigh', kind='cache', subkind='atom', lod='high')
+cache_atom_low = (nicename='cacheAtomLow', kind='cache', subkind='atom', lod='low')
+cache_gpu_high = (nicename='cacheGpuHigh', kind='cache', subkind='gpu', lod='high')
+cache_gpu_low = (nicename='cacheGpuLow', kind='cache', subkind='gpu', lod='low')
